[tool.poetry]
name = "ds-util"
version = "0.9.0"
description = "Util scripts for data science projects and Kaggle."
authors = ["kiccho1101 <youodf11khp@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kiccho1101"
repository = "https://github.com/kiccho1101/ds-util"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.2.4"
numpy = "^1.20.3"
psutil = "^5.8.0"
torch = "^1.8.1"
mecab-python3 = "^1.0.3"
scikit-learn = "1.0.2"
pytest-watch = "^4.2.0"
loguru = "0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.902"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
